--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
     </div>
 </div>
 
-<router-outlet [hidden]="mostraCarregando"></router-outlet>
-<menu-inferior [hidden]="mostraCarregando"></menu-inferior>
+<router-outlet></router-outlet>
+<menu-inferior></menu-inferior>
