--- a/src/components/menuInferior/menuInferior.component.html
+++ b/src/components/menuInferior/menuInferior.component.html
@@ -7,17 +7,17 @@
   </button>
     <button (click)="abrirHoteis()" [ngClass]="(menuSelecionado == '/hoteis')?'botaoTelaSelecionado':'botaoTelaNaoSelecionado'" class="botaoInferior" routerLink="/hoteis" style="border-right: 1px solid #ffffff57;">
     <div>
-      <i class="fa fa-building-o" aria-hidden="true"></i>
+      <i class="fa fa-bed" aria-hidden="true"></i>
       <div style="padding-top: 5px;">Hoteis</div>
     </div>
   </button>
   <button (click)="abrirPacotes()" [ngClass]="(menuSelecionado == '/pacotes')?'botaoTelaSelecionado':'botaoTelaNaoSelecionado'" class="botaoInferior" routerLink="/pacotes" style="border-right: 1px solid #ffffff57;">
     <div>
-      <i class="fa fa-plane" aria-hidden="true"></i>
+      <i class="fa fa-suitcase" aria-hidden="true"></i>
       <div style="padding-top: 5px;">Pacotes</div>
     </div>
   </button>
-  <button (click)="abrirServicos()" [ngClass]="(menuSelecionado == '/servicos')?'botaoTelaSelecionado':'botaoTelaNaoSelecionado'" class="botaoInferior" routerLink="/pacotes" style="border-right: 1px solid #ffffff57;">
+  <button (click)="abrirServicos()" [ngClass]="(menuSelecionado == '/servicos')?'botaoTelaSelecionado':'botaoTelaNaoSelecionado'" class="botaoInferior" routerLink="/servicos" style="border-right: 1px solid #ffffff57;">
     <div>
       <i class="fa fa-list-ul" aria-hidden="true"></i>
       <div style="padding-top: 5px;">Serviços</div>
