--- a/src/modulos/pacotes/pacotes.component.html
+++ b/src/modulos/pacotes/pacotes.component.html
@@ -9,43 +9,43 @@
 </div>
 
 <div [hidden]="!mostraCarregando" class="telaCarregando">
-        <div class="loading loading-block loadingDefault" style="display: block;">
-            <div class="loading-bg">
-            </div>
-            <div class="spinner">
-                <div class="balls">
-                    <div class="bounce1"></div>
-                    <div class="bounce2"></div>
-                    <div class=" bounce3"></div>
-                </div>
-                <div class="airplane">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-                        width="510px" height="510px" viewBox="0 0 510 510" style="enable-background: new 0 0 510 510;" xml:space="preserve">
-                        <g>
-                            <g id="airplanemode-on">
-                                <path d="M497.25,357v-51l-204-127.5V38.25C293.25,17.85,275.4,0,255,0c-20.4,0-38.25,17.85-38.25,38.25V178.5L12.75,306v51    l204-63.75V433.5l-51,38.25V510L255,484.5l89.25,25.5v-38.25l-51-38.25V293.25L497.25,357z"></path>
-                            </g>
-                        </g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                        <g></g>
-                    </svg>
-                </div>
-            </div>
-
+    <div class="loading loading-block loadingDefault" style="display: block;">
+        <div class="loading-bg">
         </div>
+        <div class="spinner">
+            <div class="balls">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class=" bounce3"></div>
+            </div>
+            <div class="airplane">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
+                    width="510px" height="510px" viewBox="0 0 510 510" style="enable-background: new 0 0 510 510;" xml:space="preserve">
+                    <g>
+                        <g id="airplanemode-on">
+                            <path d="M497.25,357v-51l-204-127.5V38.25C293.25,17.85,275.4,0,255,0c-20.4,0-38.25,17.85-38.25,38.25V178.5L12.75,306v51    l204-63.75V433.5l-51,38.25V510L255,484.5l89.25,25.5v-38.25l-51-38.25V293.25L497.25,357z"></path>
+                        </g>
+                    </g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                    <g></g>
+                </svg>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 <div class="telaPacotes" flex fxLayout="row" (scroll)="onScroll($event)">
@@ -53,27 +53,41 @@
     <div class="headerPacotes" fxLayout="column">
         <div fxLayout="column">
             <div fxLayout="row" class="localCampos">
-                <div class="iconeSearchGD" style="width:0px;z-index: 0;">
+
+                <div class="iconeSearchGD" style="width:0px;z-index: 999;">
                     <i class="fa fa-calendar icoSearch" aria-hidden="true"></i>
                 </div>
-                <button fxFlex="0" class="campoBotao campoData" (click)="selecionarData()">{{valPeriodoSelecionado}}</button>
+
+                <button [hidden]="(anoSelecionado == 0)" [disabled]="bloqueiaPeriodo" fxFlex="0" class="campoBotao campoData" style="padding-left: 34px;text-align: left;    padding-left: 37px;
+                        padding-right: 37px;" (click)="selecionarPeriodo()">{{mesSelecionado-1 | mesExtensoPipe }} de {{anoSelecionado}}</button>
+                <div class="iconeSearchGD" style="width:0px;z-index: 999;">
+                    <i class="fa fa-chevron-down icoSearch" aria-hidden="true" style="margin-left: -20px;font-size: 12px;padding-top: 3px;"></i>
+                </div>
+
                 <div style="width:10px;"></div>
                 <div class="iconeSearchGD" style="width:0px;z-index: 0;">
                     <i class="fa fa-users icoSearch" aria-hidden="true"></i>
                 </div>
                 <button fxFlex="0" class="campoBotao campoHospedes" (click)="selecionarPessoas()">{{qtdHospedesPesquisa}} hóspedes</button>
+                <div class="iconeSearchGD" style="width:0px;z-index: 999;">
+                    <i class="fa fa-chevron-down icoSearch" aria-hidden="true" style="margin-left: -20px;font-size: 12px;padding-top: 3px;"></i>
+                </div>
             </div>
         </div>
     </div>
-    <div  [hidden]="filtroFiltroAplicado == true" style="padding-left: 10px;padding-top: 5px;">
-    <label  class="qtdQuartos" >
-        <tbody>
-        <tr fxLayout="row"><th class="qtd">{{itemsOriginal.length}}</th><th>pacotes encontrados</th></tr>
-    </tbody>
-    </label>
+    <div [hidden]="filtroFiltroAplicado == true" style="padding-left: 10px;padding-top: 5px;padding-right: 10px;">
+        <label class="qtdQuartos" style="font-weight: 900;padding-right: 5px;">
+            <tbody>
+                <tr fxLayout="row">
+                    <th class="qtd">{{itemsOriginal.length}}</th>
+                    <th>{{itemsOriginal.length == 1?'pacote encontrado':'pacotes encontrados'}} em </th>
+                </tr>
+            </tbody>
+            {{textoLocalSelecionado}}
+        </label>
     </div>
-    
-    
+
+
     <div fxLayout="column" class="listaSelecao">
         <button fxLayout="column" class="itemSelecao" *ngFor="let item of items" (click)="itemSelecionado(item)">
             <item-pacote fxLayout="row" [dados]="item"></item-pacote>
@@ -83,8 +97,8 @@
 
 <div class="caixaFiltro" fxLayout="row" [hidden]="!mostraFiltro">
     <button class="botaoFiltro" fxLayout="row" style="flex: 1;border-right: 1px solid #ffffff29;" (click)="mostarMapaClick()">
-        <i class="fa fa-map-o icoFiltro" aria-hidden="true"></i>
-        <div style="    font-weight: 600;font-size: 11px;">Mapa</div>
+        <i class="fa fa-map-signs icoFiltro" aria-hidden="true"></i>
+        <div style="    font-weight: 600;font-size: 11px;">Saindo de</div>
     </button>
     <button class="botaoFiltro" fxLayout="row" style="flex: 1" (click)="mostarFiltroClick()">
         <i class="fa fa-filter icoFiltro" aria-hidden="true"></i>
@@ -101,6 +115,9 @@
 <detalhes-pacote #detalhesPacote class="detalhes" [hidden]="!mostraDetalhesPacote" (onFechar)="onFecharDetalhes()"></detalhes-pacote>
 <procura-local (localSelecionado)="localSelecionado($event)" class="procuraLocal" [hidden]="!mostraProcuraLocal" (onFechar)="onFecharProcuraLocal()"></procura-local>
 <tela-mapa class="telaMapa" #telaMapaHotel [hidden]="!mostraTelaMapa" (onFechar)="onFecharMapa()"></tela-mapa>
+
+<selecione-periodo #selecionePeriodo (periodoSelecionado)="periodoSelecionado($event)" class="selecionePeriodo" [hidden]="!mostraSelecionePeriodo"
+    (onFechar)="onFecharSelecionePeriodo()"></selecione-periodo>
 
 <div class="bloqueioPessoas" [hidden]="!mostraSelecionaPessoas" (click)="onFecharSelecionaPessoas()"></div>
 <seleciona-pessoas (qtdPessoasChange)="qtdPessoasChange($event)" #selecionaPessoasHotel class="selecionaPessoas" [hidden]="!mostraSelecionaPessoas"></seleciona-pessoas>
