--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,8 +18,9 @@ menu-inferior{
     background-color: var(--main-color);
     position: absolute;
     top: 0;
-    height: calc(100vh - 70px);
+    height: calc(100vh);
     width: 100%;
+    z-index: 999999999999999;
 }
 
 .icoCarregando{
