--- a/src/components/listaHoteisPacotes/listaHoteisPacotes.component.css
+++ b/src/components/listaHoteisPacotes/listaHoteisPacotes.component.css
@@ -1,4 +1,4 @@
-detalhes-pacote, selecione-periodo, procura-local, seleciona-data, seleciona-pessoas{
+detalhes-hotel, procura-local, seleciona-data, seleciona-pessoas{
     position: absolute;
     top: 0px;
     width: 100vw;
@@ -7,13 +7,13 @@ detalhes-pacote, selecione-periodo, procura-local, seleciona-data, seleciona-pes
     z-index: 99999;
 }
 
-seleciona-data, detalhes-pacote, procura-loca, selecione-periodo{
+seleciona-data, detalhes-hotel, procura-local{
     height: 100vh;
     z-index: 99999999999;
     top:0px;
 }
 
-detalhes-pacote{
+detalhes-hotel{
     height: 100vh;
     z-index: 9999999;
     background-color: #FFFFFF;
@@ -100,7 +100,7 @@ th{
     font-size: 15px;
     padding: 5px;   
     padding-top: 8px;
-    color: var(--main-color);
+    color: #ffffff;
 }
 
 .itemSelecao {
@@ -112,8 +112,7 @@ th{
     background-color: #FFFFFF;
     padding: 0;
     overflow: hidden;
-    min-height: 160px;
-    max-height: initial;
+    min-height: 141px;
 }
 
 .telaFiltro{
@@ -183,7 +182,7 @@ procura-local{
     padding-top: 13px;
 }
 
-filtro-pacote{
+filtro-hotel{
     margin-left: 0px;
     top: 0px;
     background-color: var(--main-color);
@@ -195,9 +194,8 @@ filtro-pacote{
 }
 
 .campoHospedes {
-    max-width: 138px;
+    max-width: 111px;
     padding-left: 22px;
-    min-width: 138px;
 }
 
 .campoData {
@@ -242,10 +240,10 @@ filtro-pacote{
 .caixaFiltro{
     position: absolute;
     z-index: 0;
-    background: var(--main-color);
+    background: var(--second-color);
     width: 227px;
     margin-left: calc(50% - 113px);
-    bottom: 82px;
+    bottom: 18px;
     height: 50px;
     border-radius: 30px;
     color: #FFFFFF;
@@ -290,7 +288,7 @@ filtro-pacote{
 }
 
 .telaPacotes{
-    height: calc(100vh - 115px);
+    height: calc(100vh - 46px);
     overflow-y: auto;
     display: block !important;
 }
