--- a/src/components/selecionarQuartosPacote/selecionarQuartosPacote.component.css
+++ b/src/components/selecionarQuartosPacote/selecionarQuartosPacote.component.css
@@ -10,17 +10,120 @@
     padding-right: 50px !important;   
 }
 
-.icoSearch{
-    margin-left: 10px;
+.botaoPesquisar {
+    background-color: var(--second-color);
+    border: 0;
+    height: 39px;
+    font-weight: 700;
+    color: #FFFFFF;
+    margin-top: 11px;
+    border-radius: 3px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: initial;
+    margin-bottom: 4px;
+}
+
+.caixaDisponivel{
+    background-color: #e23a3a94;
+    padding: 4px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 3px;
+    color: #FFFFFF;
+    font-size: x-small;
     margin-top: 9px;
+    margin-right: 7px;
+    padding-bottom: 5px;
+}
+
+.indiceQto{
+    text-align: center;
+    font-weight: 600;
+    font-size: larger;
     color: var(--main-color);
+}
+
+.labelValor{
+    font-weight: 700;
+    font-size: 23px;
+    padding-top: 3px;
+}
+.labelNomeQuarto{
+    font-weight: 700;
+    font-size: small;
+}
+.labelQuarto{
+    flex: 1;
+    text-align: left;
+    margin-left: 5px;
+}
+
+.qtd{
+    font-weight: 900;
+    padding-right: 5px;
+    font-size: 18px;
+    padding-left: 5px;
+}
+
+.labelReal{
+    font-size: 15px;
+    padding-top: 9px;
+    padding-right: 3px;
+}
+
+.qtdQuartos{
+    font-weight: 600;
+    font-size: 15px;
+    padding: 5px;
+    padding-top: 8px;
+    color: #ffffff;
+    padding-left: 0;
+}
+
+.localValores{
+    margin-left: 45px;
+    flex-direction: row;
+    box-sizing: border-box;
+    display: flex;
+    margin-top: 0px;
+    border-top: 1px solid #dbdbdbc7;
+    padding-top: 5px;
+}
+
+.labelTituloValor{
+    font-size: 11px;
+    color: #908e8e;
+    margin-bottom: -4px;
+}
+
+.camposValor{
+    flex:1;
+}
+
+.itemQuarto{
+    padding-right: 10px;
+    padding-top: 5px;
+    min-height: 50px;
+    border: 0;
+    border-radius: 3px;
+    background-color: #FFFFFF;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+}
+
+.icoSearch{
+    margin-left: 8px;
+    margin-top: 5px;
+    color: var(--main-color);
+    font-size: 22px;
 }
 
 .telaCarregando{
     background-color: var(--main-color);
     position: absolute;
     top: 0;
-    height: calc(100vh);
+    height: calc(100vh - 70px);
     width: 100%;
 }
 
@@ -50,7 +153,7 @@
 }
 
 .botaoVoltar{
-    margin-top: 10px;
+    margin-top: 9px;
     margin-bottom: 10px;
     margin-left: 5px !important;
 }
@@ -71,16 +174,8 @@ agm-map{
     display: none !important;
 }
 
-.itemPais{
-    color: #ffffffe0;
-    padding: 5px;
-    font-weight: 700;
-    border-bottom: 1px solid var(--main-color);
-    border-top: 1px solid var(--main-color);
-    text-align: center;
-}
 .caixaHistorico{
-    font-size: inherit;
+    font-size: 14px;
     color: #6b6b68;
     height: 50px;
     padding: 0px;
@@ -94,7 +189,6 @@ agm-map{
     text-overflow: ellipsis;
     white-space: pre;
     overflow: hidden;
-    width: calc(100vw - 10px);
 }
 
 .textoSemRegistro{
@@ -109,8 +203,8 @@ agm-map{
     white-space: pre;
     overflow: hidden;
     padding-top: 17px;
-    width: calc(100vw - 10px);
-    text-align: center;
+    width: calc(100vw - 63px);
+    padding-left: 5px;
 }
 
 .iconePlot{
