--- a/src/components/selecioneDia/selecioneDia.component.css
+++ b/src/components/selecioneDia/selecioneDia.component.css
@@ -71,14 +71,6 @@ agm-map{
     display: none !important;
 }
 
-.itemPais{
-    color: #ffffffe0;
-    padding: 5px;
-    font-weight: 700;
-    border-bottom: 1px solid var(--main-color);
-    border-top: 1px solid var(--main-color);
-    text-align: center;
-}
 .caixaHistorico{
     font-size: inherit;
     color: #6b6b68;
@@ -90,11 +82,10 @@ agm-map{
     margin-top: 0px;
     border-radius: 0;
     font-weight: 600;
-    text-align: left;
+    text-align: center;
     text-overflow: ellipsis;
     white-space: pre;
     overflow: hidden;
-    width: calc(100vw - 10px);
 }
 
 .textoSemRegistro{
@@ -109,8 +100,8 @@ agm-map{
     white-space: pre;
     overflow: hidden;
     padding-top: 17px;
-    width: calc(100vw - 10px);
-    text-align: center;
+    width: calc(100vw - 15px);
+    padding-left: 5px;
 }
 
 .iconePlot{
